--- a/demo3/src/main/resources/application.properties
+++ b/demo3/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=vehiclesDB;integratedSecurity=true;encrypt=true;trustServerCertificate=true
+# propriedaddees do hibernate são aqui
+spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=bancoJavaTeste;integratedSecurity=true;trustServerCertificate=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.dll-auto=update
+spring.jpa.hibernate.ddl-auto=update
